--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>travel-route-client</title>
+    <title>自由行</title>
   </head>
   <body>
     <div id="app"></div>
